# biocoworker

./: .gitignore  README.md  main.py  pyproject.toml  run_backend.py  run_dev.ps1
backend/: agent.py  analysis.py  main.py
backend/cache/: KEGG_2019_Mouse.json  KEGG_2021_Human.json
frontend/: index.html  main.js  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
