[project]
name = "biocoworker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.6.12",
    "fastapi>=0.138.1",
    "langchain-openai>=1.3.3",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.4",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "uvicorn>=0.49.0",
    "pydeseq2>=0.4.8",
    "gseapy>=1.3.0",
]
